# ChangeLog for x11-apps/xwininfo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/ChangeLog,v 1.28 2009/04/05 23:33:38 tester Exp $

  05 Apr 2009; Olivier Crête <tester@gentoo.org> xwininfo-1.0.4.ebuild:
  amd64 stable

*xwininfo-1.0.4 (11 Sep 2008)

  11 Sep 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +xwininfo-1.0.4.ebuild:
  Version bump.

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> xwininfo-1.0.3.ebuild:
  Stable on ppc64

  27 Jan 2008; Raúl Porcel <armin76@gentoo.org> xwininfo-1.0.3.ebuild:
  alpha/ia64/sparc stable

  29 Dec 2007; Richard Freeman <rich0@gentoo.org> xwininfo-1.0.3.ebuild:
  amd64 stable

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xwininfo-1.0.3.ebuild:
  Stable on x86 (bug #202087)

*xwininfo-1.0.3 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +xwininfo-1.0.3.ebuild:
  Bump for 7.3.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  xwininfo-1.0.2.ebuild:
  Update description to be less generic.

  06 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> xwininfo-1.0.2.ebuild:
  Add ~x86-fbsd keyword.

  17 Aug 2006; Aron Griffis <agriffis@gentoo.org> xwininfo-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64

  16 Aug 2006; Jeroen Roovers <jer@gentoo.org> xwininfo-1.0.2.ebuild:
  Stable for HPPA.

  15 Aug 2006; Guy Martin <gmsoft@gentoo.org> ChangeLog:
  Marked stable on hppa.

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xwininfo-1.0.2.ebuild:
  amd64/x86/ppc64 stable.

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xwininfo-1.0.2.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  24 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xwininfo-1.0.2.ebuild:
  Keyword ~ppc.

  08 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -xwininfo-1.0.1.ebuild:
  Pull old ebuild.

*xwininfo-1.0.2 (04 Apr 2006)

  04 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  +xwininfo-1.0.2.ebuild:
  Fix two minor memory leaks.
