@@ -1,6 +1,6 @@
 DIST xwininfo-1.0.3.tar.bz2 98632 RMD160 d084bf655a4d5de444b78312355f79c72ec85251 SHA1 e6391c9b704b19bb8d59221dc87f83637dfc5fd8 SHA256 fbe3a1aafbc6fa113e58971ff2a82605a7e106af8b810eea4b7512de58a5478a
 DIST xwininfo-1.0.4.tar.bz2 101541 RMD160 7d0dbcbb35b5176676612dc679aa607bd16c4906 SHA1 60c0410313da0b17dfd447714b4a0a47c5108747 SHA256 df9a52788632cd3338e7bd7107ac732b11b8e2c367d4600578cd77e350428ee4
-EBUILD xwininfo-1.0.3.ebuild 492 RMD160 685732752ef6f586e78b1297fcd7cf1728189e64 SHA1 da4df46a9a9a6b6997851c845cb460c4f7fb4c2b SHA256 e5aa04fe8e2241582aa4e832cdbfd895559713ba8f2a4cd9a30c337b3a912b1d
-EBUILD xwininfo-1.0.4.ebuild 515 RMD160 7048a7b825bbb522ec7b5de7daef60683c38a3af SHA1 91bd1eeea0beb18a5be232331e8e5a4f4e970439 SHA256 1ba39ddeb3dac071f7e4e8fd2665510407f902fe47b338b4240c6be63e7c5f9e
-MISC ChangeLog 3328 RMD160 11bcf27e67970b1536c56537da225b17b50942e5 SHA1 f37fd3ffd372a2000f54f6da07f92ccc890741b2 SHA256 451b832b86f4ae7d72ef3940edb36cc1028a4b410e66870ce504fb5ddecab211
+EBUILD xwininfo-1.0.3.ebuild 497 RMD160 a3a0fafc92c41d3870b0bf3be95c3415e33e0ec8 SHA1 826f5633850dd1b49bb490b810e10718d32c2d93 SHA256 fa7e11338845777cd52abf24309167e9920d27c0f936d9a4377f2254149c28e0
+EBUILD xwininfo-1.0.4.ebuild 519 RMD160 34fab579eb169d31ebf161d803c9247f9af9a3f1 SHA1 823f74ec15226bc16aab25418139327187a5de3e SHA256 111c836e28cdd47008418eef15d34ac9451a57a25172aa3c6b00a7523f4bfde1
+MISC ChangeLog 3704 RMD160 8490f0b82a97bb8b50b865d354aade642aedf980 SHA1 bf9d45417eefad8171cd2fa2cda4d189ea250e90 SHA256 e4cf8c4b649debd1dc8ece6b4eb4428c48792b46997e8c7b71ee35c90463ec89
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
