@@ -1,6 +1,17 @@
 # ChangeLog for x11-apps/xwininfo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/ChangeLog,v 1.28 2009/04/05 23:33:38 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xwininfo/ChangeLog,v 1.31 2009/05/05 12:34:43 jer Exp $
+
+  05 May 2009; Jeroen Roovers <jer@gentoo.org> xwininfo-1.0.4.ebuild:
+  Stable for HPPA (bug #268581).
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  xwininfo-1.0.2.ebuild, xwininfo-1.0.3.ebuild, xwininfo-1.0.4.ebuild:
+  add empty IUSE entry to silence repoman
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  xwininfo-1.0.4.ebuild:
+  stable x86, bug 268581
 
   05 Apr 2009; Olivier Crête <tester@gentoo.org> xwininfo-1.0.4.ebuild:
   amd64 stable
